# liquid-ai-hackathon

./: .gitignore  LICENSE  README.md
app/: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  app.js  docker-compose.yml  math.js  package-lock.json  package.json  render.yaml  server.js
app/public/: app.html  app.js  how-it-works.html  index.html  language-manager.js  scroll-effects.js  style.css  transitions.js
app/public/translations/: en.json  ja.json
leap-finetune/: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml
leap-finetune/src/leap_finetune/: __init__.py  trainer.py
leap-finetune/src/leap_finetune/configs/: __init__.py  dpo_configs.py  job_config.py  peft_configs.py  sft_configs.py  vlm_sft_config.py
leap-finetune/src/leap_finetune/data_loaders/: __init__.py  basic_examples.py  dataset_loader.py  image_loader.py  validate_loader.py
leap-finetune/src/leap_finetune/training_loops/: dpo_run.py  sft_run.py  vlm_sft_run.py
leap-finetune/src/leap_finetune/utils/: constants.py  load_models.py  logging_utils.py  peft.py
models/mamography-finetune-8/merged_model/: config.json  generation_config.json  preprocessor_config.json  processor_config.json  tokenizer_config.json
src/: template.md
src/data/: dataset.jsonl
src/scripts/: convert_dicom.py  create_dataset.py  create_jsonl.py  model.py  process_dicom_dirs.py  sampler.py  translation.py
