[project]
name = "leap-finetune"
version = "0.1.0"
description = "A minimal fine-tuning repo for LFM2, fully built on Open Source."
readme = "README.md"
authors = [
    { name = "Liquid AI", email = "support@liquid.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "peft>=0.15.2",
    "deepspeed>=0.17.1",
    "ray[train]>=2.47.1",
    "torch>=2.7.1",
    "transformers>=4.55.0",
    "trl>=0.18.2",
    "rich>=14.1.0",
    "pillow>=11.3.0",
    "mpi4py>=4.1.0",
    "liger-kernel>=0.6.2",
]

[project.scripts]
leap-finetune = "leap_finetune:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]
